--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lemaries.religi.wazifahapp.MainActivity">
+    tools:context="lemaries.religi.wazifahapp.MainActivity"
+    android:background="@color/dark">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,7 +23,8 @@
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="counter" />
+            android:text="counter"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/textDua"
@@ -30,8 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClickTextChanged"
-            android:text="Nanana batman"
-            android:textSize="25sp" />
+            android:text="Mulai"
+            android:textSize="25sp"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
