--- a/app/src/main/res/layout/activity_halaman_depan.xml
+++ b/app/src/main/res/layout/activity_halaman_depan.xml
@@ -4,55 +4,86 @@
     android:id="@+id/activity_halaman_depan"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lemaries.religi.wazifahapp.HalamanDepan"
-    android:background="@color/dark">
+    android:background="@color/birutua"
+    tools:context="lemaries.religi.wazifahapp.HalamanDepan">
+
+
+    <ImageView
+        android:id="@+id/ornamentatas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="-80dp"
+        android:src="@drawable/ornament_atas" />
 
     <ImageButton
         android:id="@+id/btnPrefereces"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ornamentatas" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="87dp"
         android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/textJudul"
+        <!--<TextView-->
+        <!--android:id="@+id/textJudul"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="15dp"-->
+        <!--android:text="Wazifah"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="50dp" />-->
+
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="Wazifah"
-            android:textSize="50dp"
-            android:textColor="@color/white"/>
+            android:layout_marginBottom="-100dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="70dp"
+            android:src="@drawable/logo_wzh_03"></ImageView>
+
 
         <Button
             android:id="@+id/btnSugra"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="70dp"
+            android:background="@color/white"
             android:onClick="intentSugra"
             android:text="sugra"
-            android:textColor="@color/dark"
-            android:background="@color/white"/>
+            android:textColor="@color/dark" />
 
         <Button
             android:id="@+id/btnKubra"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="70dp"
+            android:background="@color/white"
             android:onClick="intentKubra"
             android:text="kubra"
-            android:textColor="@color/dark"
-            android:background="@color/white"/>
+            android:textColor="@color/dark" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ornament_bawah"
+        android:layout_marginTop="120dp"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
