--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="lemaries.religi.wazifahapp.MainActivity"
-    android:background="@color/dark">
+    android:background="@color/birutua">
 
     <LinearLayout
         android:layout_width="wrap_content"
