--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="dark">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="birutua">#091223</color>
+    <color name="grey">#454546</color>
 </resources>
