--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/dark</item>
-        <item name="colorPrimaryDark">@color/dark</item>
-        <item name="colorAccent">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/birutua</item>
+        <item name="colorPrimaryDark">@color/birutua</item>
+        <item name="colorAccent">@color/grey</item>
     </style>
 
 </resources>
